--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -57,16 +57,22 @@
     "manualEntryHint": "Вы всё ещё можете ввести штрих-код вручную ниже",
     "alignCode": "Выровняйте код в рамке",
     "scanBarcode": "Сканировать",
+    "scan": "Сканировать",
     "initFailed": "Не удалось запустить сканер.",
     "permissionError": "Пожалуйста, предоставьте разрешения камеры в настройках браузера.",
     "notFoundError": "Камера не найдена. Подключите камеру или используйте ручной ввод.",
     "inUseError": "Камера используется другим приложением. Закройте другие приложения.",
     "httpsError": "Камера требует защищённое соединение (HTTPS).",
     "checkPermissions": "Пожалуйста, проверьте разрешения камеры и попробуйте снова.",
-    "cleanupFailed": "Ошибка очистки камеры. Возможно, потребуется перезагрузить страницу."
+    "cleanupFailed": "Ошибка очистки камеры. Возможно, потребуется перезагрузить страницу.",
+    "cameraRegion": "Камера сканера штрих-кодов",
+    "dialogDescription": "Сканируйте штрих-коды, размещая их внутри рамки сканера",
+    "retryAccessCamera": "Попробовать снова получить доступ к камере",
+    "videoStream": "Видеопоток камеры для сканирования штрих-кодов"
   },
   "camera": {
     "title": "Сделать фото",
+    "description": "Сделайте фото товара с помощью камеры устройства",
     "capture": "Сделать фото",
     "retake": "Переснять",
     "usePhoto": "Использовать фото",
@@ -75,14 +81,17 @@
     "permissionDenied": "Доступ к камере запрещён. Пожалуйста, разрешите доступ к камере.",
     "notFound": "Камера не найдена на этом устройстве.",
     "inUse": "Камера используется другим приложением.",
-    "uploadError": "Не удалось загрузить изображение. Попробуйте использовать URL."
+    "uploadError": "Не удалось загрузить изображение. Попробуйте использовать URL.",
+    "captureError": "Не удалось сделать фото. Попробуйте снова.",
+    "photo": "Фото"
   },
   "scannerFrame": {
     "enterManually": "Или введите штрих-код вручную:",
     "barcodePlaceholder": "1234567890",
     "adding": "Добавление...",
     "add": "Добавить",
-    "notFound": "Не найдено"
+    "notFound": "Не найдено",
+    "tryAgain": "Попробовать снова"
   },
   "product": {
     "newProduct": "Новый товар",
@@ -91,15 +100,24 @@
     "barcode": "Штрих-код",
     "barcodeCannotChange": "Штрих-код нельзя изменить",
     "barcodeAddNow": "Добавьте штрих-код для сканирования",
+    "barcodeHelp": "Уникальный идентификатор товара для сканирования",
     "name": "Название товара",
     "namePlaceholder": "напр. Органические бананы",
+    "nameHelp": "Введите информативное название товара",
     "category": "Категория",
+    "categoryHelp": "Выберите категорию товара для организации",
     "price": "Цена",
     "pricePlaceholder": "0.00",
+    "priceHelp": "Исходная стоимость от поставщика (до наценки)",
     "initialStock": "Начальный запас",
+    "initialStockHelp": "Начальное количество для добавления в инвентарь",
     "expiryDate": "Срок годности",
+    "expiryDateHelp": "Срок годности товара (необязательно)",
     "imageUrl": "URL изображения",
     "imageUrlPlaceholder": "https://example.com/image.jpg",
+    "imageHelp": "Вставьте URL или сделайте фото с камеры",
+    "noImage": "Нет изображения",
+    "tapToAddImage": "Нажмите, чтобы добавить изображение",
     "inStock": "В наличии",
     "expiry": "Срок годности",
     "noExpiry": "Без срока годности",
@@ -140,7 +158,13 @@
     "currentStock": "Текущий запас",
     "currentStockHelp": "Управляется через движение запасов",
     "supplier": "Поставщик",
-    "supplierPlaceholder": "Введите имя поставщика"
+    "supplierPlaceholder": "Введите имя поставщика",
+    "quickActions": "Быстрые действия",
+    "unsavedChanges": "Несохранённые изменения",
+    "discard": "Отменить",
+    "close": "Закрыть",
+    "base": "база",
+    "stockLevel": "Запас: {{stock}}"
   },
   "categories": {
     "General": "Общее",
@@ -157,7 +181,11 @@
   "markup": {
     "label": "Наценка",
     "explanation": "Цена в магазине рассчитывается добавлением % наценки к базовой стоимости",
-    "formula": "Цена магазина = База × (1 + {{percent}}%)"
+    "formula": "{{markup}}% наценки: €{{base}} → €{{store}}",
+    "selectTier": "Выберите уровень наценки, чтобы установить цену в магазине",
+    "tier50": "Наценка 50%",
+    "tier70": "Наценка 70%",
+    "tier100": "Наценка 100%"
   },
   "inventory": {
     "title": "Список товаров",
@@ -168,6 +196,17 @@
     "adjustFilters": "Попробуйте изменить фильтры или поисковый запрос",
     "emptyStateHint": "Импортируйте товары или создайте их через сканер",
     "barcode": "Штрих-код",
+    "search": "Поиск",
+    "searchPlaceholder": "Поиск по названию или штрих-коду...",
+    "clearSearch": "Очистить поиск",
+    "allCategories": "Все категории",
+    "openFilters": "Открыть фильтры",
+    "import": "Импорт",
+    "export": "Экспортировать",
+    "importExcel": "Импорт Excel",
+    "importInvoice": "Импорт счёта",
+    "productsCount": "{{count}} товаров",
+    "productsFiltered": "{{filtered}} из {{total}}",
     "lowStock": "Низкий",
     "mediumStock": "Средний",
     "goodStock": "Хороший",
@@ -175,13 +214,26 @@
     "refresh": "Обновить",
     "refreshed": "Обновлено",
     "dataRefreshed": "Данные инвентаря обновлены",
+    "sort": {
+      "name": "Название",
+      "stock": "Запас",
+      "price": "Цена",
+      "category": "Категория",
+      "ascending": "По возрастанию",
+      "descending": "По убыванию"
+    },
     "filters": {
       "search": "Поиск товаров...",
       "searchPlaceholder": "Поиск по названию или штрих-коду...",
       "allCategories": "Все категории",
       "category": "Все категории",
       "clearCategory": "Сбросить фильтр категории",
+      "title": "Фильтры и действия",
+      "description": "Фильтрация и сортировка инвентаря",
+      "stockStatus": "Статус запасов",
+      "allProducts": "Все товары",
       "lowStock": "Низкий запас",
+      "lowStockOnly": "Только с низким запасом",
       "lowStockTooltip": "Показать товары с запасом на уровне или ниже минимального",
       "sortBy": "Сортировать по",
       "sortByName": "Названию",
@@ -190,7 +242,12 @@
       "sortByCategory": "Категории",
       "ascending": "По возрастанию",
       "descending": "По убыванию",
+      "filterCount": "{{count}} активных фильтров",
       "clear": "Сбросить",
+      "clearAll": "Сбросить все фильтры",
+      "clearFilter": "Сбросить фильтр {{filter}}",
+      "more": "больше",
+      "actions": "Действия",
       "productsCount": "{{count}} товаров",
       "productsFiltered": "{{filtered}} из {{total}}",
       "refreshInventory": "Обновить инвентарь",
@@ -221,6 +278,9 @@
     "items": "товаров",
     "empty": "Корзина пуста",
     "emptyHint": "Сканируйте товары для добавления в корзину",
+    "itemsList": "Товары в корзине",
+    "emptyState": "Корзина пуста",
+    "startScanning": "Начать сканирование товаров",
     "emptyCheckoutHint": "Сканируйте товары для добавления в корзину",
     "total": "Итого",
     "totalWithCount": "Итого ({{count}} товаров)",
@@ -241,6 +301,11 @@
     "removeItem": "Удалить товар из корзины",
     "itemRemoved": "Товар удалён",
     "itemRemovedDescription": "{{name}} удалён из корзины",
+    "decreaseQuantityFor": "Уменьшить количество для {{name}}",
+    "increaseQuantityFor": "Увеличить количество для {{name}}",
+    "removeItemFor": "Удалить {{name}} из корзины",
+    "quantityLabel": "Количество: {{quantity}}",
+    "viewCart": "Посмотреть корзину",
     "quickAdd": {
       "title": "Быстрое добавление",
       "placeholder": "Сканируйте или введите код",
@@ -251,6 +316,7 @@
     "title": "Сканируйте штрих-коды для добавления в корзину",
     "complete": "Покупка завершена",
     "stockUpdated": "Запасы обновлены для всех товаров.",
+    "stockUpdatedSuccess": "Запасы обновлены для всех товаров.",
     "backToHome": "На главную",
     "confirmTitle": "Подтверждение покупки",
     "confirmMessage": "Завершить покупку {{count}} товаров? Итого: {{total}}",
@@ -273,7 +339,23 @@
     "grandTotal": "Итого",
     "proceedToCheckout": "Перейти к оплате",
     "editCart": "Редактировать корзину",
-    "missingPrices": "{{count}} товар(ов) без цены"
+    "missingPrices": "{{count}} товар(ов) без цены",
+    "transactionSummary": "Сводка операции",
+    "itemsLabel": "Товары:",
+    "products": "товары",
+    "quantityLabel": "Количество:",
+    "units": "ед.",
+    "referenceLabel": "Референс:",
+    "share": "Поделиться",
+    "export": "Экспорт",
+    "history": "История",
+    "productsUpdated": "Обновлено товаров:",
+    "totalQuantity": "Общее количество:",
+    "referenceNumber": "Номер ссылки:"
+  },
+  "common": {
+    "close": "Закрыть",
+    "edit": "Редактировать"
   },
   "dialogs": {
     "productDetail": {
@@ -295,6 +377,7 @@
     },
     "deleteConfirm": {
       "title": "Удалить товар?",
+      "description": "Подтвердите удаление товара из инвентаря",
       "aboutToDelete": "Вы собираетесь безвозвратно удалить:",
       "barcode": "Штрих-код",
       "currentStock": "Текущий запас",
@@ -312,7 +395,10 @@
     },
     "editProduct": {
       "title": "Редактирование товара",
-      "description": "Редактировать данные товара и сохранить изменения"
+      "description": "Редактировать данные товара и сохранить изменения",
+      "sectionBasic": "Основная информация",
+      "sectionPricing": "Цены",
+      "sectionStock": "Запасы и поставки"
     }
   },
   "toast": {
@@ -370,7 +456,8 @@
     "componentStack": "Стек компонентов:",
     "tryRefreshing": "Попробуйте обновить страницу",
     "unknownError": "Произошла неизвестная ошибка",
-    "productCreationFailed": "Не удалось создать товар."
+    "productCreationFailed": "Не удалось создать товар.",
+    "imageUploadFailed": "Не удалось загрузить изображение товара. Попробуйте снова или продолжите без изображения."
   },
   "import": {
     "button": "Импорт",
@@ -412,6 +499,88 @@
     "tableCategory": "Категория",
     "tablePrice": "Цена",
     "tableStock": "Запас"
+  },
+  "invoiceUpload": {
+    "title": "Импорт из счета",
+    "stepDescriptions": {
+      "upload": "Загрузите счет, чтобы автоматически извлечь данные товаров",
+      "preview": "Просмотрите извлеченные товары перед импортом",
+      "importing": "Создание товаров в инвентаре...",
+      "complete": "Товары из счета успешно импортированы"
+    },
+    "dropzone": {
+      "title": "Перетащите счет сюда",
+      "subtitle": "или нажмите, чтобы выбрать файлы",
+      "fileTypes": "Поддерживаются JPG, PNG (макс. 10МБ)",
+      "selectFile": "Выбрать файл счета"
+    },
+    "progress": {
+      "preparing": "Подготовка счета...",
+      "extracting": "Извлечение текста с помощью ИИ...",
+      "analyzing": "Анализ товаров...",
+      "finalizing": "Завершение..."
+    },
+    "howItWorks": {
+      "title": "Как это работает",
+      "step1": "Шаг 1: ИИ читает текст счета (Google Cloud Vision)",
+      "step2": "Шаг 2: Извлекает названия товаров, количество и цены",
+      "step3": "Шаг 3: Вы проверяете и подтверждаете перед импортом",
+      "free": "Практически бесплатно: 1000 страниц/мес включено"
+    },
+    "errors": {
+      "invalidFile": "Выберите файл JPG или PNG.",
+      "processFailed": "Не удалось обработать счет. ",
+      "apiKey": "Проверьте настройки API.",
+      "network": "Проверьте подключение к интернету и попробуйте снова.",
+      "quota": "Достигнут лимит сервиса. Попробуйте позже.",
+      "generic": "Попробуйте снова или обратитесь в поддержку, если проблема сохраняется.",
+      "importFailed": "Импорт не удался. ",
+      "networkRetry": "Произошла ошибка сети. Проверьте подключение и повторите попытку.",
+      "rateLimit": "Превышен лимит запросов. Подождите немного и попробуйте снова.",
+      "importFailedTitle": "Ошибка импорта",
+      "extractionFailed": "Ошибка извлечения"
+    },
+    "preview": {
+      "extracted": "Успешно извлечено {{count}} товаров",
+      "supplier": "Поставщик:",
+      "invoiceNumber": "Счет #:",
+      "date": "Дата:",
+      "total": "Итого:",
+      "noBarcodeTitle": "Примечание: У некоторых товаров нет штрих-кодов",
+      "noBarcodeDescription": "Вы можете отсканировать штрих-коды позже с помощью кнопки редактирования."
+    },
+    "table": {
+      "productName": "Название товара",
+      "barcode": "Штрих-код",
+      "quantity": "Кол-во",
+      "unitPrice": "Цена за единицу",
+      "total": "Итого",
+      "actions": "Действия",
+      "noBarcode": "Нет штрих-кода",
+      "save": "Сохранить изменения",
+      "cancel": "Отмена",
+      "edit": "Редактировать товар",
+      "remove": "Удалить товар"
+    },
+    "importInfo": {
+      "title": "Что дальше?",
+      "addedCount": "{{count}} товаров будет добавлено в инвентарь",
+      "stockIn": "Будут созданы движения прихода с извлеченными количествами",
+      "missingBarcodes": "Товары без кодов можно отредактировать позже и добавить штрих-коды",
+      "editLater": "Вы можете изменить данные в любое время на странице инвентаря"
+    },
+    "status": {
+      "importing": "Идет импорт товаров...",
+      "importingProgress": "{{current}} из {{total}} товаров создано",
+      "completeTitle": "Импорт завершен!",
+      "completeSubtitle": "Успешно импортировано {{count}} товаров из счета"
+    },
+    "actions": {
+      "cancel": "Отмена",
+      "back": "Назад",
+      "importCount": "Импортировать {{count}} товаров",
+      "done": "Готово"
+    }
   },
   "export": {
     "button": "Экспорт",
